:sparkles: Store crud
